Add dishes categories endpoint
