# backend/routes/router.go
@@ -9,9 +9,10 @@ import (
 )
 
 type Router struct {
-	Dish  controller.Dish
-	Order controller.Order
-	User  controller.User
+	Dish             controller.Dish
+	DishesCategories controller.DishesCategories
+	Order            controller.Order
+	User             controller.User
 }
 
 //nolint:gochecknoglobals
@@ -23,13 +24,30 @@ func (r Router) InitRoutes(authMiddleware UserAuth, customMiddlewares ...echo.Mi
 	e.JSONSerializer = JsonSerializer{}
 	e.Validator = Validate{v: validator.New()}
 
-	e.GET("/dishes", r.Dish.List)
-	e.POST("/dishes", authMiddleware.UserAdminAuth(r.Dish.AddDish))
+	dishes := e.Group("/dishes")
+	{
+		dishes.GET("/", r.Dish.List)
+		dishes.POST("/", authMiddleware.UserAdminAuth(r.Dish.AddDish))
+
+		categories := dishes.Group("/categories")
+		{
+			categories.GET("/", r.DishesCategories.GetCategories)
+			categories.GET("/:id", r.DishesCategories.GetCategory)
+
+			categories.POST("/", authMiddleware.UserAdminAuth(r.DishesCategories.AddCategory))
+			categories.POST("/:id", authMiddleware.UserAdminAuth(r.DishesCategories.RenameCategory))
+
+			categories.DELETE("/:id", authMiddleware.UserAdminAuth(r.DishesCategories.DeleteCategory))
+		}
+	}
 
 	e.POST("/orders", r.Order.ProcessOrder)
 
-	e.GET("/users/get_by_telegram_id/:telegram_id", r.User.GetUserIdByTelegramId)
-	e.GET("/users/:user_id/is_admin", r.User.IsAdmin)
+	users := e.Group("/users")
+	{
+		users.GET("/get_by_telegram_id/:telegram_id", r.User.GetUserIdByTelegramId)
+		users.GET("/:user_id/is_admin", r.User.IsAdmin)
+	}
 
 	return e.Server.Handler
 }
